--- a/index.html
+++ b/index.html
@@ -11,12 +11,52 @@
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/styles.css">
-  
+
 </head>
 <body>
 
+  <header>
+    <div class="container">
+      <h1>Welcome to Brunos Pizza!</h1>
+    </div>
+  </header>
 
 
+  <section>
+      <h2>Pizza & more</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h3>Pizza's</h3>
+          </div>
+
+          <div class="col-md-4">
+            <h3>Wing's</h3>
+          </div>
+          
+          <div class="col-md-4">
+            <h3>Salad's</h3>
+          </div>
+        </div>
+      </div>      
+  </section>
+
+<section>
+  <h2>Location</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Img of resturant goes here</h3>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <p>Located on: Insert address</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
