--- a/index.html
+++ b/index.html
@@ -13,17 +13,26 @@
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
+
 <body>
 
   <header>
     <div class="container">
-      <h1>Welcome to Brunos Pizza!</h1>
+      <div class="textCenter">
+        <h1>Welcome to Brunos Pizza!</h1>
+      </div>
     </div>
   </header>
 
 
   <section>
-      <h2>Pizza & more</h2>
+    <div class="color1">
+
+
+
+      <div class="textCenter">
+        <h2>Pizza's & more</h2>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -33,30 +42,37 @@
           <div class="col-md-4">
             <h3>Wing's</h3>
           </div>
-          
+
           <div class="col-md-4">
             <h3>Salad's</h3>
           </div>
         </div>
-      </div>      
+      </div>
+    </div>
   </section>
 
-<section>
-  <h2>Location</h2>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h3>Img of resturant goes here</h3>
-      </div>
-    </div>
+  <section>
+    <div class="color2">
 
-    <div class="row">
-      <div class="col-md-6">
-        <p>Located on: Insert address</p>
+      <div class="textCenter">
+        <h2>Location</h2>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Img of resturant goes here</h3>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <p>Located on: Insert address</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 </body>
+
 </html>
