--- a/index.html
+++ b/index.html
@@ -28,24 +28,29 @@
   <section>
     <div class="color1">
       <div class="textCenter">
-        <h2>Pizza's & more</h2>
+        <h2>Pizza's & More</h2>
       </div>
       <div class="container">
         <div class="row">
           <div class="col-md-4">
             <div class="sectionOne">
+              <img src="img/pizza.jpg" alt="pizza" class="imgFit">
               <h3>Pizza</h3>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="sectionOne">
+              <img src = "img/wings.jpg" alt="wings" class="imgFit">
               <h3>Wings</h3>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="sectionOne">
+              <a href="menu/menu.pdf" download="menu">
+                <img src="img/menu.jpg" alt="menu" class="imgFit">
+              </a>
               <h3>Menu</h3>
             </div>
           </div>
@@ -64,6 +69,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="sectionTwo">
+              <img src="img/rest.jpg" alt="resturant" class="resturantFit">
               <h3>Img of resturant goes here</h3>
             </div>
             
