--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
           <div class="col-md-6">
             <div class="sectionTwo">
               <div id ="map"></div>
-
+              <div class="sectionText">
+                <h3> Address:</h3>
+                <address> 1108 Washington Way, Longview, WA 98632, USA</address>
+                  <h6> Contact Number: (360) 636-4970</h6>
+              </div>
             </div>
            </div>
           
