Styling it a bit more, mobile responsive next

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 <body>
 
   <header>
-    <div class="container">
-      <div class="textCenter">
-        <h1>Welcome to Brunos Pizza!</h1>
-      </div>
-    </div>
+
   </header>
 
 
@@ -36,6 +32,8 @@
             <div class="sectionOne">
               <img src="img/pizza.jpg" alt="pizza" class="imgFit">
               <h3>Pizza</h3>
+              <p>Drop by Bruno's Pizza and try out our classic, thin-crust pizza made from freshly prepared dough and sauce.
+              </p>
             </div>
           </div>
 
@@ -43,6 +41,7 @@
             <div class="sectionOne">
               <img src = "img/wings.jpg" alt="wings" class="imgFit">
               <h3>Wings</h3>
+              <p>We serve a variety of sides like chicken wings, salads, and breadsticks. You’ll enjoy our beverages as well.</p>
             </div>
           </div>
 
@@ -52,6 +51,7 @@
                 <img src="img/menu.jpg" alt="menu" class="imgFit">
               </a>
               <h3>Menu</h3>
+              <p>Check out our complete menu! We have a variaty of options not just pizzas! We have fish and chips, salads and much, much more! Click on the photo to download the menu!</p>
             </div>
           </div>
         </div>
@@ -69,8 +69,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="sectionTwo">
-              <img src="img/rest.jpg" alt="resturant" class="resturantFit">
-              <h3>Img of resturant goes here</h3>
+              <img src="img/brunophoto.jpg" alt="resturant" class="resturantFit">
             </div>
             
           </div>
@@ -93,6 +92,15 @@
       </div>
     </div>
   </section>
+
+<footer>
+  <div class="container">
+    <p>© 2016 Brunos Pizza.</p>
+    <div>
+      <p>Images from unsplash.com</p>
+    </div>
+  </div>
+</footer>
 
 </body>
 
