--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 <body>
 
   <header>
-
+    <div class="topnav" id="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#about"> About </a>
+    </div>
+    <div class="header"></div>
   </header>
 
 
@@ -54,6 +58,9 @@
               <p>Check out our complete menu! We have a variaty of options not just pizzas! We have fish and chips, salads and much, much more! Click on the photo to download the menu!</p>
             </div>
           </div>
+        </div>
+        <div class="center">
+          <p>The food we serve is not gluten-free but our friendly and accommodating staff can take care of all your allergy requests.</p>
         </div>
       </div>
     </div>
@@ -94,11 +101,14 @@
   </section>
 
 <footer>
-  <div class="container">
-    <p>© 2016 Brunos Pizza.</p>
-    <div>
-      <p>Images from unsplash.com</p>
+  <div class="footer">
+    <div class="container">
+      <p>© 2016 Brunos Pizza.</p>
+      <div>
+        <p>Images from unsplash.com</p>
+      </div>
     </div>
+
   </div>
 </footer>
 
