--- a/index.html
+++ b/index.html
@@ -21,7 +21,22 @@
       <a class="active" href="#home">Home</a>
       <a href="#about"> About </a>
     </div>
-    <div class="header"></div>
+
+    <div clas="slideshow">
+
+
+      <div class= "slides" >
+        <img src="img/wings.jpg" style="width:100%">
+      </div>
+
+      <div class="slides">
+        <img src="img/rest.jpg" style="width:100%">
+
+
+      </div>
+
+    </div>
+
   </header>
 
 
@@ -151,5 +166,6 @@
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeqllUe8E8Cu9zCLT1amtEUqOB2BRTJ8s&callback=initMap&libraries=places"></script>
 
+<script src="js/script.js"></script>
 
 </html>
