Working on fixing slider

--- a/index.html
+++ b/index.html
@@ -23,20 +23,19 @@
     </div>
 
     <div clas="slideshow">
-
-
       <div class= "slides" >
-        <img src="img/wings.jpg" style="width:100%">
+          <img src="img/wings.jpg" style="width:100%">
       </div>
 
       <div class="slides">
-        <img src="img/rest.jpg" style="width:100%">
+          <img src="img/rest.jpg" style="width:100%">
 
+        </div>
 
-      </div>
+    <a class="prev" onclick="rightLeft(-1)">&#10094;</a>
+    <a class="next" onclick="rightLeft(1)">&#10095;</a>
 
     </div>
-
   </header>
 
 
