--- a/index.html
+++ b/index.html
@@ -17,25 +17,12 @@
 <body>
 
   <header>
-    <div class="topnav" id="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#about"> About </a>
-    </div>
-
-    <div clas="slideshow">
-      <div class= "slides" >
-          <img src="img/wings.jpg" style="width:100%">
-      </div>
-
-      <div class="slides">
-          <img src="img/rest.jpg" style="width:100%">
-
-        </div>
-
-    <a class="prev" onclick="rightLeft(-1)">&#10094;</a>
-    <a class="next" onclick="rightLeft(1)">&#10095;</a>
-
-    </div>
+      <div class="header"></div>
+    <ul>
+      <li><a href="#home"> Home </a></li>  
+      <li><a href="#about"> About</a></li>
+      <li><a href="#location"> Location</a></li>
+    </ul>
   </header>
 
 
